[package]
name = "bells-miniscript"
version = "10.2.0"
authors = [
    "Andrew Poelstra <apoelstra@wpsoftware.net>, Sanket Kanjalkar <sanket1729@gmail.com>",
]
license = "CC0-1.0"
homepage = "https://github.com/Nintondo/rust-miniscript/"
repository = "https://github.com/Nintondo/rust-miniscript/"
description = "Miniscript: a subset of Bellscoin Script designed for analysis"
keywords = ["crypto", "bellscoin", "miniscript", "script"]
readme = "README.md"
edition = "2018"

[features]
default = ["std"]
std = ["bellscoin/std", "bellscoin/secp-recovery"]
no-std = ["hashbrown", "bellscoin/no-std"]
compiler = []
trace = []

unstable = []
serde = ["actual-serde", "bellscoin/serde"]
rand = ["bellscoin/rand"]
base64 = ["bellscoin/base64"]

[dependencies]
bellscoin = { version = "0.30.5", default-features = false }
hashbrown = { version = "0.11", optional = true }
internals = { package = "bitcoin-private", version = "0.1.0", default_features = false }

# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0.103", optional = true }

[dev-dependencies]
serde_test = "1.0.147"
bellscoin = { version = "0.30.5", features = ["base64"] }
secp256k1 = { version = "0.27.0", features = ["rand-std"] }
actual-base64 = { package = "base64", version = "0.13.0" }

[[example]]
name = "htlc"
required-features = ["std", "compiler"]

[[example]]
name = "parse"
required-features = ["std"]

[[example]]
name = "sign_multisig"
required-features = ["std"]

[[example]]
name = "verify_tx"
required-features = ["std"]

[[example]]
name = "psbt"
required-features = ["std"]

[[example]]
name = "xpub_descriptors"
required-features = ["std"]

[[example]]
name = "taproot"
required-features = ["compiler", "std"]

[[example]]
name = "psbt_sign_finalize"
required-features = ["std", "base64"]

[workspace]
members = ["bitcoind-tests", "fuzz"]
exclude = ["embedded"]
